--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fe_diploma",
   "version": "0.1.0",
-  "homepage": "https://markedone60.github.io/",
+  "homepage": "https://markedone60.github.io/index.html",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
